# cca_invenio

./: .dockerignore  .gitignore  .gitlab-ci.yml  .invenio  .tool-versions  Dockerfile  Pipfile  docker-compose.full.yml  docker-compose.yml  docker-services.yml  example.env  invenio.cfg  mise.toml  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: release.yml  stage.yml
app_data/: communities.yaml  readme.md  test_users.json  users.yaml  vocabularies.yaml  vocabularies_future.yml
app_data/vocabularies/: affiliations.yaml  cca_local.yaml  date_types.yaml  description_types.yaml  lc.yaml  licenses.csv  names_orcid.yaml  programs.yaml  relation_types.yaml  resource_types.yaml  roles.yaml  subject_form.yaml  subject_name.yaml  subject_place.yaml  subject_time.yaml  subject_topic.yaml  temporal.yaml  title_types.yaml
assets/js/components/: LibrariesConditionalFields.js
assets/js/invenio_app_rdm/overridableRegistry/: mapping.js
assets/less/site/globals/: site.overrides
assets/templates/: archives_series.html
assets/templates/custom_fields/: ArchivesSeries.js  CommunityField.js  ConditionalField.js  CourseField.js  archives_series.js
deploy/: ci.sh  readme.md  values.yaml
docker/nginx/conf.d/: default.conf
docker/pgadmin/: servers.json
docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
notes/: build.md  communities.md  configure.md  cors.json  deploy.md  develop.md  notes.md  permissions-communities.md  run.md  upgrade.md
notes/code_samples/: add_user.py  admins_wd_report.py  change_owner.py  custom-fields-record.json  dbconnect  example.Dockerfile  id-map-example.json  make_subject.py  post.py  pv-disk-usage.fish  rebuild  stats_backup.fish
site/: .gitkeep  readme.md  setup.cfg
site/cca/: __init__.py  cli.py  customfields.py  jobs.py  models.py  permissions.py  tasks.py  views.py  webpack.py
site/cca/scripts/: add_communities.py  add_editor.py  add_users.py  clean.py  courses_index.py  groups_sync.py  id_map_to_csv.py  id_map_utils.py  set_owner.py
site/cca/templates/semantic-ui/cca/: vocablist.html
site/cca/vocablist/: vocablist.py
static/js/: dev_api_link.js
templates/: archives_series.html  archivesseries.html  communityfield.html  conditionalfield.html  course.html  program.html
templates/semantic-ui/: tracking_code.html
templates/semantic-ui/invenio_app_rdm/: footer.html  site_footer.html
tests/: __init__.py  conftest.py  readme.md  test_cli.py  test_custom_fields.py  test_groups_sync.py  test_records.py  test_search.py  test_views.py  utils.py
translations/en/LC_MESSAGES/: messages.po
