[project]
name = "cca_invenio"
version = "0.1.0"
description = "CCA's InvenioRDM instance."
authors = [{name = "Eric Phetteplace", email = "ephetteplace@cca.edu"}]
readme = "readme.md"
# matches mise.toml
requires-python = ">=3.12,<3.13"
license = "ECL-2.0"
dependencies = [
    "google-cloud-secret-manager==2.24.0",
    "google-cloud-storage==3.4.0",
    "invenio-app-rdm[opensearch2, s3]==13.0.3",
    "invenio-saml==1.2.0",
    "invenio-utilities-tuw==2025.1.1",
    # see notes/build.md on lxml, xmlsec, & uwsgi deps
    "lxml==6.0.2",
    "python-dotenv>=1.1.0",
    "xmlsec==1.3.14",
]

[dependency-groups]
dev = [
    "check-manifest >= 0.25",
    "flask-debugtoolbar >= 0.16.0"
]
# these are only needed if uwsgi is the server, not locally
uwsgi = [
    "uwsgi==2.0.30",
    "uwsgi-tools==1.1.1",
    "uwsgitop==0.12",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[tool.setuptools.packages.find]
where = ["site"]
