[project]
name = "cca"
version = "0.1.0"
description = "CCA's InvenioRDM instance."
authors = [{name = "Eric Phetteplace", email = "ephetteplace@cca.edu"}]
readme = "readme.md"
# matches mise.toml
requires-python = ">=3.12,<3.13"
license = "ECL-2.0"
dependencies = [
    "email-validator==2.3",
    "google-cloud-secret-manager==2.25.0",
    "google-cloud-storage==3.4.1",
    "invenio-app-rdm[opensearch2,s3]==13.0.5",
    "invenio-saml==1.2.1",
    # see notes/build.md on lxml, xmlsec, & uwsgi deps
    "lxml==5.3.0",
    "pydantic==2.12.3",
    "python-dotenv==1.2.1",
    "xmlsec==1.3.14",
]

[dependency-groups]
dev = [
    "check-manifest==0.51",
    "flask-debugtoolbar >= 0.16.0",
    "pytest>=8.4.2",
]
# these are only needed if uwsgi is the server, not locally
uwsgi = [
    "uwsgi==2.0.30",
    "uwsgi-tools==1.1.1",
    "uwsgitop==0.12",
]

[project.entry-points."invenio_assets.webpack"]
cca_theme = "cca.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
cca_views = "cca.views:create_blueprint"

[project.entry-points."invenio_celery.tasks"]
cca_tasks = "cca.tasks"

[project.entry-points."invenio_jobs.jobs"]
test_job = "cca.jobs:TestJob"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[tool.setuptools.packages.find]
where = ["site"]

[tool.uv.sources]
cca = {path = "./site", editable = true}
