[metadata]
# name here should match what's in pyproject.toml
name = cca

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_assets.webpack =
    cca_theme = cca.webpack:theme
invenio_base.blueprints =
    cca_views = cca.views:create_blueprint
invenio_celery.tasks =
    cca_tasks = cca.tasks
invenio_jobs.jobs =
    test_job = cca.jobs:TestJob
flask.commands =
    cca = cca.cli:cca
